// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should match snapshot when HIGHTLIGHT false 1`] = `
<div
  className="card  "
  data-test=""
>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <CardImageWrap />
      <div
        className="media-content"
      >
        <CardHeading>
          mockHeading
        </CardHeading>
        <CardSubHeading
          className="text-ellipsis-5"
        />
        <CardSubHeadingAdditional />
      </div>
    </div>
    <CardBodyWrap>
      <div>
        City
      </div>
      <div>
        Country
      </div>
      <div>
        PostalCode
      </div>
      <div>
        contactPerson
      </div>
    </CardBodyWrap>
  </div>
</div>
`;

exports[`Tile should match snapshot when HIGHTLIGHT true 1`] = `
<div
  className="card hightlight "
  data-test=""
>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <CardImageWrap />
      <div
        className="media-content"
      >
        <CardHeading>
          mockHeading
        </CardHeading>
        <CardSubHeading
          className="text-ellipsis-5"
        />
        <CardSubHeadingAdditional />
      </div>
    </div>
    <CardBodyWrap>
      <div>
        City
      </div>
      <div>
        Country
      </div>
      <div>
        PostalCode
      </div>
      <div>
        contactPerson
      </div>
    </CardBodyWrap>
  </div>
</div>
`;
